css responsive update

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <div class="description">
         <img
-          class="header-img"
+          class="header-img first-descr-img"
           src="https://images.unsplash.com/photo-1536782896453-61d09f3aaf3e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
           alt="bakery showcase"
         />
@@ -106,7 +106,7 @@
           </p>
         </div>
 
-        <div class="about-container">
+        <div class="about-container sec">
           <div class="paragraphs">
             <p class="about-par">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci
