--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
     />
     <!-- <link rel="stylesheet" href="/css-reset.css" /> -->
-    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="./main.css" />
 
     <title>Responsive page</title>
   </head>
