--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       crossorigin="anonymous"
     />
     <!-- <link rel="stylesheet" href="/css-reset.css" /> -->
-    <link rel="stylesheet" type="txt/css" href="./main.css" />
-
+    <link href="./main.css" rel="stylesheet" type="text/css" />
+   
     <title>Responsive page</title>
   </head>
   <body>
